--- a/latex/Literature review/literature.tex
+++ b/latex/Literature review/literature.tex
@@ -71,7 +71,7 @@
 
 \section{Reading synthesis}
 
-Why did I read these papers? What I got from them?
+Why I read these papers and what I got from them
 \\
 \\
 \noindent \textbf{\bibentry{mesman_gendered_2018} }
@@ -108,7 +108,13 @@ The paper by \cite{mesman_gendered_2018} mentioned this meta-analysis, to say th
 \\
 \noindent \textbf{\bibentry{morawska_effects_2020} }
 
-And then there's this systemativ review (with not many papers...) that shows differences in parenting in early childhood: they vocalised differently, used different socialising strategies, played differently and provided different toys to their sons and daughters.
+And then there's this systematic review that shows differences in parenting in early childhood: they vocalised differently, used different socialising strategies, played differently and provided different toys to their sons and daughters. They find that this differential parenting was associated with some differences in child development across child gender: including differences in child vocalisation, displays of affect, pain responses, compliance, toy play and aggression.
+
+However, this review isn't based on many papers (45 studies, of which 14 focus on vocalisation, 21 on socialisation, 7 on play, 3 on toys). Authors also point to the low quality of these studies: lack of longitudinal studies.
+
+The authors of this review explain that theories commonly used to explain gender development have limited focus on the substantial influence of parents in the early lives of children: sociological \citep{connell2015}, evolutionary \citep{archer1996}, cognitive-developmental \citep{kohlberg1966}, gender  schema \citep{bem1981, martin1981} and social constructionist \citep{fine2015} theories. They argue that the social cognitive theory \citep{bussey_social_1999} is better suited, as it it highlights the role of parents. It proposes that gender role behaviour arises as a result of multiple reciprocal interactions between the child’s individual variables and both the family context and the broader social-cultural system.
+
+The authors argue that the first years of life have long been recognised as fundamental to future development, and the role of parents is widely acknowledged as being critical. They cite evidence of gendered differences in the early years of a child's life: pregnant mothers describe their foetus’ movement differently when they know their baby’s gender \citep{rothman1986}; 2-year-olds recognise which toys are for boys versus girls \citep{serbin2001}; preschool boys are constrained to playing with masculine toys when engaging with adults \citep{wood2002}; and 6-year old girls are less likely than boys to believe that members of their own gender are “really, really smart” \citep{bian2017}.
 \\
 \\
 \noindent \textbf{\bibentry{culp1983comparison} }
