--- a/latex/biblio.bib
+++ b/latex/biblio.bib
@@ -1220,15 +1220,6 @@
 	address   = {Lanham, MD}
 }
 
-@article{wood2002impact,
-	author  = {Wood, Eileen and Desmarais, Serge and Gugula, Sara},
-	title   = {The Impact of Parenting Experience on Gender Stereotyped Toy Play of Children},
-	journal = {Sex Roles},
-	year    = {2002},
-	volume  = {47},
-	pages   = {39--49}
-}
-
 @article{beets2007parents,
 	author  = {Beets, Michael W. and Vogel, Randy and Chapman, Stanley and Pitetti, Kenneth H. and Cardinal, Bradley J.},
 	title   = {Parent’s Social Support for Children’s Outdoor Physical Activity},
@@ -4666,4 +4657,54 @@ publisher={Elsevier}
 	year      = {1998},
 	publisher = {Ballantine Books},
 	address   = {New York}
+}
+
+@article{halim2017,
+	author    = {May Ling D. Halim and Diane N. Ruble and Catherine S. Tamis-LeMonda and Patrick E. Shrout and David M. Amodio},
+	title     = {Gender Attitudes in Early Childhood: Behavioral Consequences and Cognitive Antecedents},
+	journal   = {Child Development},
+	year      = {2017},
+	volume    = {88},
+	number    = {3},
+	pages     = {882--899},
+	doi       = {10.1111/cdev.12642}
+}
+
+@book{rothman1986,
+	author    = {Barbara Katz Rothman},
+	title     = {The Tentative Pregnancy: Prenatal Diagnosis and the Future of Motherhood},
+	year      = {1986},
+	publisher = {Penguin Books},
+	address   = {New York, NY}
+}
+
+@article{serbin2001,
+	author    = {Lisa A. Serbin and Diane Poulin-Dubois and Kathleen A. Colburne and Marina G. Sen and Jennifer A. Eichstedt},
+	title     = {Gender Stereotyping in Infancy: Visual Preferences for and Knowledge of Gender-Stereotyped Toys in the Second Year},
+	journal   = {International Journal of Behavioral Development},
+	year      = {2001},
+	volume    = {25},
+	number    = {1},
+	pages     = {7--15},
+	doi       = {10.1080/01650250042000078}
+}
+
+@article{wood2002,
+	author    = {Eileen Wood and Sarah Desmarais and Shelley Gugula},
+	title     = {The Impact of Parenting Experience on Gender Stereotyped Toy Play of Children},
+	journal   = {Sex Roles},
+	year      = {2002},
+	volume    = {47},
+	number    = {1--2},
+	pages     = {39--49}
+}
+@article{bian2017,
+	author    = {Lin Bian and Sarah-Jane Leslie and Andrei Cimpian},
+	title     = {Gender Stereotypes about Intellectual Ability Emerge Early and Influence Children's Interests},
+	journal   = {Science},
+	year      = {2017},
+	volume    = {355},
+	number    = {6323},
+	pages     = {389--391},
+	doi       = {10.1126/science.aah6524}
 }
