--- a/latex/Literature review/literature.tex
+++ b/latex/Literature review/literature.tex
@@ -108,13 +108,33 @@ The paper by \cite{mesman_gendered_2018} mentioned this meta-analysis, to say th
 \\
 \noindent \textbf{\bibentry{morawska_effects_2020} }
 
-And then there's this systematic review that shows differences in parenting in early childhood: they vocalised differently, used different socialising strategies, played differently and provided different toys to their sons and daughters. They find that this differential parenting was associated with some differences in child development across child gender: including differences in child vocalisation, displays of affect, pain responses, compliance, toy play and aggression.
+And then there's this systematic review that investigates whether gendered parenting leads to gendered child developement. In terms of gendered parenting, it finds that, while there were many areas where parents did not differ in their parenting towards boys and girls, across each of the domains there were also a number of significant differences. Parents vocalised differently, used different socialising strategies, played differently and provided different toys to their sons and daughters. They find that this differential parenting was associated with some differences in child development across child gender, such as differences in child vocalisation, displays of affect, pain responses, compliance, toy play and aggression, though only in correlational terms.
 
-However, this review isn't based on many papers (45 studies, of which 14 focus on vocalisation, 21 on socialisation, 7 on play, 3 on toys). Authors also point to the low quality of these studies: lack of longitudinal studies.
+However, because the inclusion criteria for this study required the presence of both gender-differentiated parenting and measurement of child outcomes, this review isn't based on many papers (45 studies, of which 14 focus on vocalisation, 21 on socialisation, 7 on play, 3 on toys). Authors also point to the low quality of these studies: lack of longitudinal studies. But the authors argue for the usefulness of their paper because prior reviews and meta-analyses have examined the question of whether differences in parenting exist, without also investigating differences in child outcomes. 
 
-The authors of this review explain that theories commonly used to explain gender development have limited focus on the substantial influence of parents in the early lives of children: sociological \citep{connell2015}, evolutionary \citep{archer1996}, cognitive-developmental \citep{kohlberg1966}, gender  schema \citep{bem1981, martin1981} and social constructionist \citep{fine2015} theories. They argue that the social cognitive theory \citep{bussey_social_1999} is better suited, as it it highlights the role of parents. It proposes that gender role behaviour arises as a result of multiple reciprocal interactions between the child’s individual variables and both the family context and the broader social-cultural system.
+Overall, I wasn't convinced by the argumentation. It was quite difficult to read because the authors leaped from one idea to the next with a logic I didn't grasp. This paper cites papers published in obscure journals.
 
-The authors argue that the first years of life have long been recognised as fundamental to future development, and the role of parents is widely acknowledged as being critical. They cite evidence of gendered differences in the early years of a child's life: pregnant mothers describe their foetus’ movement differently when they know their baby’s gender \citep{rothman1986}; 2-year-olds recognise which toys are for boys versus girls \citep{serbin2001}; preschool boys are constrained to playing with masculine toys when engaging with adults \citep{wood2002}; and 6-year old girls are less likely than boys to believe that members of their own gender are “really, really smart” \citep{bian2017}.
+On the theory side, the authors of this review explain that theories commonly used to explain gender development have limited focus on the substantial influence of parents in the early lives of children: sociological \citep{connell2015}, evolutionary \citep{archer1996}, cognitive-developmental \citep{kohlberg1966}, gender  schema \citep{bem1981, martin1981} and social constructionist \citep{fine2015} theories. They argue that the social cognitive theory \citep{bussey_social_1999} is better suited, as it highlights the role of parents. It proposes that gender role behaviour arises as a result of multiple reciprocal interactions between the child’s individual variables and both the family context and the broader social-cultural system.
+\\
+\\
+\noindent \textbf{\bibentry{bussey_social_1999} }
+
+From \cite{mesman_gendered_2018}, I decided to read this theory paper. In trying to explain why gender differences happen, different theories (psychoanalytic theory, cognitive-developmental theory, gender schema theory, biological theories, sociological theories) have focused on the importance of different elements, independent from one another: identification with the same-sex parent is presumed to resolve the conflict children experience as a result of erotic attachment to the opposite-sex parent; gender identity is the basic organizer and regulator of children's gender learning; children want to be like others of their own sex; gender differentiation is ancestrally programmed; gender is a social construction rather than a biological given.
+
+Instead, social–cognitive theory puts forward the relation and the intercausality between different systems, all forming and reinforcing gender differences: self, family, workplace, media, peers, etc: operate interdependently, not as disjoined entities. It integrates psychological and sociostructural determinants within a unified conceptual framework. The authors mostly discard a biologically deterministic view because it can't explain cultural diversity and the rapid pace of social change.
+
+Given our human capability for symbolization, our advanced capability for observational learning, our self-regulatory and self-reflective capabilities, the authors describe three modes of influence that should work in reproducing gender: modelling, enactive experience, direct tuition. Modelling: children can learn gender stereotypes from observing the differential performances of male and female models. Enactive experience: evaluative social reactions to gender-linked behaviours are important sources of information for constructing gender conceptions. Direct tuition: often used to generalise the informativeness of specific modeled exemplars and particular behavioural outcome experiences. Modelling is most influential at birth, before enactive experience and direct tuition kick in.
+
+There's a lot of emphasis on the idea that boys have to sefl-regulate a lot more, possibly because they have a stronger incentive to oversee male-linked behaviour because it usually carries higher status and power than female-linked behaviour \citep{fagot1985, fagot1993}. For boys, there is little conflict between their own valuation of their gender and societal valuation of it. For girls, however, although they may value being a girl and gender-linked activities, they very early recognize the differential societal valuation of male and female roles \citep{kuhn1978, meyer1980}. Consequently, women have some incentive to attempt to raise their status by mastering activities and interests traditionally typed as masculine. Even at the preschool level, girls show greater modeling after the other gender than do boys.
+
+The authors also argue that beliefs of personal efficacy are essential for one's outcomes. They explain how to build up these beliefs. I was very interested in this idea until I talked with Bart about their review on what helps improve school performance, and beliefs in one's own capabilities didn't help, according to their meta-analysis. But here's something the authors argue: Women's beliefs about their capabilities and their career aspirations are shaped by undermining social practices within the family, the educational system, peer relationships, the mass media, the occupational system, and the culture at large \citep{bandura1997, betz1987, dweck1978, eccles1989, gettys1981, hackett1981, jacobs1989, mcghee1980, phillips1990, signorielli1990}.
+
+The authors go over evidence for the influence of mothers versus fathers, of peers, of schools, of the pressures of the labour market. Probably also of the media.
+\\
+\\
+\noindent \textbf{\bibentry{west1987doing} }
+
+Doing gender
 \\
 \\
 \noindent \textbf{\bibentry{culp1983comparison} }
