--- a/latex/biblio.bib
+++ b/latex/biblio.bib
@@ -4708,3 +4708,35 @@ publisher={Elsevier}
 	pages     = {389--391},
 	doi       = {10.1126/science.aah6524}
 }
+
+@article{mondschein2000,
+	author    = {Emily R. Mondschein and Karen E. Adolph and Catherine S. Tamis-LeMonda},
+	title     = {Gender Bias in Mothers' Expectations about Infant Crawling},
+	journal   = {Journal of Experimental Child Psychology},
+	year      = {2000},
+	volume    = {77},
+	number    = {4},
+	pages     = {304--316},
+	doi       = {10.1006/jecp.2000.2597}
+}
+
+@article{smith1978,
+	author    = {Cynthia Smith and Barbara Lloyd},
+	title     = {Maternal Behavior and Perceived Sex of Infant: Revisited},
+	journal   = {Child Development},
+	year      = {1978},
+	volume    = {49},
+	number    = {4},
+	pages     = {1263--1265},
+	doi       = {10.2307/1128775}
+}
+@article{raag1998,
+	author    = {Tanya Raag and Cynthia L. Rackliff},
+	title     = {Preschoolers' Awareness of Social Expectations of Gender: Relationships to Toy Choices},
+	journal   = {Sex Roles: A Journal of Research},
+	year      = {1998},
+	volume    = {38},
+	number    = {9--10},
+	pages     = {685--700},
+	doi       = {10.1023/A:1018890728636}
+}
